<resources>
    <string name="app_name">GeodeticApp</string>
    <string name="google_maps_key" translatable="false">AIzaSyB0bTQS6JTwZdMM96zV5LM4xABpSVYYr4c</string>
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="map_menu">Map</string>
    <string name="points_menu">Points</string>
    <string name="settings_menu">Settings</string>
    <string name="settings_display_category">Display</string>
    <string name="show_compass">Show compass</string>
    <string name="show_compass_summary">Show compass on map screen</string>
    <string name="show_wsg84">Show WSG84 on map</string>
    <string name="show_wsg84_summary">Show WSG84 coordinates when point is selected</string>
    <string name="show_cs2000">Show CS2000 on map</string>
    <string name="show_cs2000_summary">Show CS2000 coordinates when point is selected</string>
    <string name="search_points_hint">Point name</string>
    <string name="point_name">Point name</string>
    <string name="wsg84_name">WSG84</string>
    <string name="x_coordinate_edit_text">X:</string>
    <string name="y_coordinate_edit_text">Y:</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="cs2000_name">CS2000</string>
    <string name="xgausskruger">Xgk</string>
    <string name="ygausskruger">Ygk</string>
    <string name="ok_button">OK</string>
    <string name="point_name_placeholder">Name</string>
    <string name="latitude_format_long">Lat: %f</string>
    <string name="longitude_format_long">Long: %f</string>
    <string name="xgk_format_long">Xgk: %f</string>
    <string name="ygk_format_long">Ygk: %f</string>
    <string name="latitude_format_short">Lat: %.3f</string>
    <string name="longitude_format_short">Long: %.3f</string>
    <string name="xgk_format_short">Xgk: %.3f</string>
    <string name="ygk_format_short">Ygk: %.3f</string>
    <string name="save_point_error">Error. Couldn\'t save the point!</string>
    <string name="save_point_success">Point saved.</string>
    <string name="gps_init_error">Error. No permission granted for GPS!</string>
    <string name="point_not_selected_error">There\'s no point selected!</string>
    <string name="double_validate_error">Field should be a real number!</string>
    <string name="name_validate_error">Field can\'t be empty!</string>
    <string name="about_menu">About</string>
    <string name="author">Author: Michał Fabiański</string>
    <string name="creation_year">2017</string>
    <string name="zone_placeholder">Unknown zone</string>
</resources>
