<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_display_category"
        android:key="pref_key_display_settings">
        <CheckBoxPreference
            android:key="pref_key_show_compass"
            android:title="@string/show_compass"
            android:summary="@string/show_compass_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_show_wsg84"
            android:title="@string/show_wsg84"
            android:summary="@string/show_wsg84_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_show_cs2000"
            android:title="@string/show_cs2000"
            android:summary="@string/show_cs2000_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>