<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="student.pl.edu.pb.geodeticapp.activities.AboutActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:text="@string/author"
        android:id="@+id/app_author"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/app_author"
        android:layout_centerInParent="true"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:id="@+id/app_title"
        android:layout_margin="15dp"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_author"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:text="@string/creation_year"
        android:layout_margin="10dp"/>
</RelativeLayout>
